--- a/hivemind/css/main.css
+++ b/hivemind/css/main.css
@@ -18,6 +18,10 @@ canvas{
     border: none;
     border-radius: 1.5vh;
     background-color: gray;
+
+    color: black;
+    font-size: 2.5vh;
+    text-align: center;
 }
 .info_button:hover{
     background-color: darkgray;
@@ -33,6 +37,10 @@ canvas{
     border: none;
     border-radius: 1vh;
     background-color: gray;
+
+    color: black;
+    font-size: 2.5vh;
+    text-align: center;
 }
 .close_button:hover{
     background-color: darkgray;
@@ -46,7 +54,9 @@ canvas{
     border-radius: 1vh;
     background-color: gray;
 
+    color: black;
     font-size: 1.5vw;
+    text-align: center;
 }
 .network_button:hover{
     background-color: darkgray;
@@ -62,21 +72,21 @@ canvas{
     padding-left: 3vw;
     padding-right: 3vw;
     padding-top: 5vh;
+    padding-bottom: 4vh;
 
     background-color: lightgray;
     box-shadow: 0 0 5vw 0 black;
-    border-left: 10px thick black;
 }
 p{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2vw;
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 3.25vh;
 }
 .bottom{
-    font-size: 1.5vw;
     position: absolute;
-    bottom: 3vw;
-    width: 100%;
+    bottom: 10vh;
+    width: 30vw;
+    right: 10vw;
+
+    font-size: 2.5vh;
 }
