--- a/hivemind/css/main.css
+++ b/hivemind/css/main.css
@@ -1,10 +1,12 @@
-body{
+html, body{
+    height: 100%;
     margin: 0;
+    overflow: hidden;
 }
 
 canvas{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     image-rendering: pixelated;
 }
 
